# lair

./: .gitignore  LICENSE  MANIFEST.in  README.md  __init__.py  config.py  constants.py  env-dev.yml  env.yml  environment.yml  hrrr.py  instrument_config.json  inventory.py  pyproject.toml  slv.py  valley.py
.github/workflows/: update_version.yml
air/: air.py  carbontracker.py  enhancements.py  hrrr.py  inventory.py  mesowest.py  meteorology.py  noaa.py  soundings.py  stilt.py
docs/: cron  dev-cron  dev-docs.sh  latest-docs.sh  make_docs.py  make_docs.sh  requirements.txt  switcher.json  uataq.md  versions.json
docs/source/: air.rst  conf.py  config.rst  constants.rst  index.rst  inventories.rst  inversion.rst  units.rst  utils.rst  valley.rst
docs/source/_templates/: group.rst
docs/source/uataq/: config.rst  filesystem.rst  general.rst  index.rst  instruments.rst  laboratory.rst  quickstart.rst  sites.rst
lair/: __init__.py  _ccg_filter.py  _optional.py  _version.py  air.py  background.py  clock.py  config.py  constants.py  dev.py  geo.py  hrrr.py  inventories.py  mesowest.py  noaa.py  parallel.py  pcaps.py  plotter.py  records.py  soundings.py  units.py  utils.py  valley.py
lair/air/: __init__.py  air.py  background.py  carbontracker.py  enhancements.py  hrrr.py  inventories.py  inventory.py  mesowest.py  meteorology.py  noaa.py  plots.py  soundings.py  stilt.py
lair/inversion/: __init__.py  bayesian.py  core.py  estimators.py  flux.py  operators.py  utils.py
lair/land/: uta.py
lair/space/: tropomi.py
lair/uataq/: __init__.py  _laboratory.py  config.json  errors.py  instruments.py  pollutants.py  sites.py
lair/uataq/filesystem/: __init__.py  _filesystem.py
lair/uataq/filesystem/groupspaces/: __init__.py  horel.py  lin.py
lair/utils/: clock.py  dev.py  geo.py  grid.py  plotter.py  records.py
met/: hrrr.py
uataq/: columns.md  core.py  errors.py  instruments.py  mobile.py  network.py  stilt.py  uucon.py
uataq/filesystem/: __init__.py
uataq/filesystem/groupspaces/: horel.py
uataq/pipeline/: __init__.py  bb.py  dispatch.py  errors.py  horel.py  lgr_ugga.py  metone.py  preprocess.py  reader.py  trax.py
uataq/pipeline/instruments/: __init__.py  bb.py  cr1000.py  gps.py  lgr_ugga.py  licor_6262.py  licor_7000.py  magee.py  metone.py  teledyne_t500u.py
uataq/pipeline/lgr/: __init__.py  no2.py  ugga.py
uataq/pipeline/teledyne/: t500u.py
utils/: __init__.py  clock.py  grid.py  plotter.py  records.py  timer.py
