[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "lair"
description = "Python package for land-air interactions research."
authors = [
    {name = "James Mineau", email = "James.Mineau@utah.edu"},
]
readme = "README.md"
keywords = ["land-air interactions", "research", "pollution", "atmospheric science"]
requires-python = ">=3.10"
dependencies = [
  "boto3",
  "cartopy",
  "cf_xarray",
  "dask",
  "fastkml",
  "geopandas",
  "lxml",  # speeds up fastkml
  "matplotlib",
  "molmass",
  "netcdf4",
  "numpy",
  "pandas",
  "pint-xarray",
  "pyproj",
  "rioxarray",
  "s3fs",
  "scipy",
  "shapely",
  "siphon",
  "typing-extensions",  # needed to import Self before 3.11
  "xarray",
  "xesmf",
  "zarr",
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/jmineau/lair.git"
Issues = "https://github.com/jmineau/lair/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "lair.__version__"}

[tool.setuptools.packages.find]
include = ["lair*"]
