[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lair"
description = "Python package for land-air interactions research."
authors = [
    {name = "James Mineau", email = "James.Mineau@utah.edu"},
]
readme = "README.md"
keywords = ["land-air interactions", "research", "pollution", "atmospheric science"]
version = "2026.05.7"
requires-python = ">=3.10"
dependencies = [
  "cartopy",
  "cf_xarray",
  "dask",
  "geopandas",
  "matplotlib",
  "netcdf4",
  "numpy",
  "pandas",
  "pint",
  "pint-xarray",
  "pyproj",
  "rasterio",
  "rioxarray",
  "shapely",
  "typing-extensions",  # needed to import Self before 3.11
  "xarray",
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]

[project.optional-dependencies]
# Remote data access (AWS S3, soundings)
requests = [
  "boto3",
  "s3fs",
  "siphon",
]

# Alternative data formats (Zarr, KML)
formats = [
  "zarr",
  "numcodecs",
  "fastkml",
  "lxml",  # speeds up fastkml
]

# Scientific computing (chemistry, CCG filter)
science = [
  "molmass",
  "scipy",
]

# Advanced regridding
regridding = [
  "xesmf",
]

# Complete installation with all optional dependencies
complete = [
  "lair[requests]",
  "lair[formats]",
  "lair[science]",
  "lair[regridding]",
]

[project.urls]
Repository = "https://github.com/jmineau/lair.git"
Issues = "https://github.com/jmineau/lair/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["lair*"]
